# sync-party

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
common/: CMakeLists.txt  def.hpp  echo.cpp  opts.cpp  opts.hpp  types.hpp  util.hpp
controller/: CMakeLists.txt  controller.cpp  controller.hpp  main.cpp
cortex/: CMakeLists.txt  adjust.cpp  adjust.hpp  controller.cpp  controller.hpp  driver.cpp  driver.hpp  logger.hpp  main.cpp  matt_sub.cpp  mqtt_sub.cpp  pwm.hpp  steering.cpp  steering.hpp  types.hpp  util.hpp
docs/: Aufbau.fzz  CMakeLists.txt
docs/code/: Doxyfile
docs/fritzing/: Aufbau.fzz  Pololu SImple High-Power Motor Controller 18v15.fzpz
docs/latex/: Sync-Party_Dokumentation.tex  classicthesis-config.tex
docs/latex/Anhang/: Anhang.tex  literatur.tex
docs/latex/Gestaltung/: Contents.tex  Titlepage.tex
docs/latex/Kapitel/: Anhang.aux  BeschreibungProjekt.tex  Stundenliste.tex
docs/latex/Logo/: oth_logo_neu.eps
docs/plakat/: Sync-Party_Plakat.pptx  plakat.tex
docs/presentation/: Präsentation_DT_Simon.pptx
docu/: Aufbau.fzz
docu/latex/: Sync-Party_Dokumentation.tex  classicthesis-config.tex
driver/: CMakeLists.txt  cmake  main.cpp  proto-def.hpp
kamera/: CMakeLists.txt  camera_opencv.cpp  main.cpp
misc/: wifi-ap.sh
publisher_controller/: CMakeLists.txt  asio.hpp  controller.cpp  driver.cpp  main.cpp  steering.hpp
src/: CMakeLists.txt  main.cpp
src/arduino/pwm/: pwm.ino
src/daemon/: CMakeLists.txt
src/daemon/common/: CMakeLists.txt  asio.cpp  asio.hpp  def.hpp  echo.cpp  echo.hpp  logger.hpp  net.cpp  net.hpp  opts.cpp  opts.hpp  timer.cpp  timer.hpp  util.hpp
src/daemon/controller/: CMakeLists.txt  controller.cpp  controller.hpp  main.cpp
src/daemon/cortex/: CMakeLists.txt  adjust.cpp  adjust.hpp  camera_opencv.cpp  camera_opencv.h  camera_opencv.hpp  driver.cpp  driver.hpp  main.cpp  net.cpp  net.hpp  pwm.cpp  pwm.hpp
src/daemon/cortex/camera/: CMakeLists.txt
src/driver/: cmake  main.cpp  proto-def.hpp
src/kamera/: CMakeLists.txt  camera_opencv.cpp  camera_opencv.h  main.cpp
src/motor/: motor.cpp  motor.h  test.cpp
